--- a/event-service.yaml
+++ b/event-service.yaml
@@ -19,7 +19,7 @@ spec:
         image: westerntravellers/backend:western-events
         env:
           - name: SPRING_DATASOURCE_URL
-            value: jdbc:mysql://34.145.104.167:3306/western
+            value: jdbc:mysql://34.125.70.162:3306/westernevents
           - name: SPRING_DATASOURCE_USERNAME
             value: western
           - name: SPRING_DATASOURCE_PASSWORD
