--- a/gateway-service.yaml
+++ b/gateway-service.yaml
@@ -31,9 +31,10 @@ kind: Service
 metadata:
   name: gateway-service-svc
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: gateway-service
   ports:
   - port: 80
     targetPort: 8080
+    protocol: TCP
