--- a/SSl Creation/nginx.yaml
+++ b/SSl Creation/nginx.yaml
@@ -17,7 +17,45 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx
+        image: nginx:latest
         ports:
         - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata: 
+  name: nginx-svc
+spec:
+  ports:
+    - port: 80
+      targetPort: 80
+      protocol: TCP
+      name: http
+  selector:
+    app: nginx
+  type: NodePort
+
+---
+
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata: 
+  name: nginx-ingress
+  annotations:
+    kubernetes.io/ingress.global-static-ip-name: westernstaticip
+    networking.gke.io/managed-certificates: managed-cert
+    kubernetes.io/ingress.class: "gce"
+spec:
+  rules:
+    - host: "westerntravellers.com"
+      http:
+        paths:
+        - path: "/"
+          pathType: Prefix
+          backend:
+            service:
+              name: nginx-svc
+              port:
+                number: 80
+    
 
